[package]
name = "cargo_culture"
version = "0.1.0"
authors = ["ZackPierce <zacharypierce@gmail.com>"]

[lib]
name = "cargo_culture"
path = "src/lib.rs"

[[bin]]
name = "cargo-culture"
path = "src/bin/cargo-culture.rs"

[dependencies]
cargo_metadata = "0.5.4"
colored = "1.6"
lazy_static = "1.0"
regex = "1"
structopt = "0.2"

[dev-dependencies]
tempdir = "0.3"
proptest = "0.7"
