[package]
name = "cargo-culture-kit"
version = "1.0.0"
authors = ["ZackPierce <zacharypierce@gmail.com>"]
description = "Library for writing tools that check Rust project conventions"
license = "MIT"
repository = "https://github.com/PolySync/cargo-culture"
documentation = "https://docs.rs/cargo-culture-kit"
homepage = "https://github.com/PolySync/cargo-culture"
categories = ["development-tools"]

[features]
default = []

[dependencies]
cargo_metadata = "0.5.4"
colored = "1.6"
failure = "0.1"
lazy_static = "1.0"
regex = "1"

[dev-dependencies]
tempfile = "3"
proptest = "0.7"
