[package]
name = "cargo-culture"
version = "0.1.0"
authors = ["Zachary Pierce <zpierce@polysync.io>"]
description = "Tool to check Rust project conventions"
license = "MIT"
repository = "https://github.com/PolySync/cargo-culture"
documentation = "https://docs.rs/crate/cargo-culture"
homepage = "https://github.com/PolySync/cargo-culture"
categories = ["development-tools"]

[dependencies]
cargo-culture-kit = { path = "../cargo-culture-kit", version = "0.1.0" }
failure = "0.1"
structopt = "0.2"

[dev-dependencies]
proptest = "0.7"
tempfile = "3"
